--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -20,6 +20,22 @@ body {
   font-size: 24px;
 }
 
+body{
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.logo {
+  font-family: 'Bungee', cursive;
+}
+
+.main{
+  display: flex;
+  justify-content: space-around;
+  width: 90%;
+  background-image: url("/images/absurdity-851x315.png");
+}
+
+
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
