--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,23 +19,31 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
 }
-
+/* custom font for body */
 body{
   font-family: 'Source Sans Pro', sans-serif;
 }
-
+/* font for logo */
 .logo {
   font-family: 'Bungee', cursive;
 }
 
+/* layout for screen width less than 1024px */
 .main{
   display: flex;
   justify-content: space-around;
   width: 90%;
   background-image: url("/images/absurdity-851x315.png");
+
 }
 
-
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+/* layout shifting for screen width is 1024px or bigger */
+@media only screen and (min-width: 1024px) {
+  #flexDiv{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 150px;
+    padding-left: 20px;
+  }
+}
